# Gen2Vec-ArtFont-App

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json
art-text-generator/: index.html  package-lock.json  package.json
docs/: cli-packaging.md  comfyui-portable-customization.md  electron-ipc.md  electron-packaging.md  hardware-environment.md  preload-stage-progress.md  基于开源文生图模型的矢量艺术字生成应用.md  基于开源文生图模型的矢量艺术字生成应用项目申报书.md
scripts/: configure-comfyui.ps1  download-comfyui-engine.ps1  download-models.ps1  download-models.sh  quick-packaging.ps1  setup-deps.ps1
services/txt2img-api/: README.md  pyproject.toml  pytest.ini  test_generate.py  txt2img_entry.py
services/txt2img-api/app/: generator.py  main.py  models.py
services/txt2img-api/custom_nodes/comfyui-inspyrenet-rembg/: Inspyrenet_Rembg.py  __init__.py
services/txt2img-api/scripts/: build-backend-exe.ps1  download-models.ps1  download-models.sh  engine-config.txt  poll_comfy.py
services/txt2img-api/src/app/: __init__.py  generator.py  main.py  models.py
services/txt2img-api/tests/: test_api.py  test_generator.py  test_main.py
services/txt2img-api/workflows/: flux_schnell.json  qwen_image_2512_gguf.json  test_z_image_turbo.json
services/word2pic/: README.md  pyproject.toml  pytest.ini  test_generate.py
services/word2pic/scripts/: run_comfyui.py
services/word2pic/src/app/: __init__.py  generator.py  main.py  models.py
services/word2pic/tests/: test_api.py  test_generator.py
services/word2pic/workflows/: test_z_image_turbo.json
testdata/: README.md
tests/: README.md  (+12 more)
(+62 files in other folders)
